src/objects/Deployment_Plan__c.object
<CustomObject>
    <description>Represents a deployment plan name and dates for IATA projects</description>
    <fields>
        <fullName>Deployment_Date__c</fullName>
        <description>Date for deployment</description>
        <label>Deployment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IATA_Project__c</fullName>
        <description>Name of the IATA project to be deployed</description>
        <label>IATA Project</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AMS</fullName>
                </value>
                <value>
                    <fullName>3a</fullName>
                </value>
                <value>
                    <fullName>3b</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Platform</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Week__c</fullName>
        <description>Week of deployment</description>
        <label>Week</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Deployment Plan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Deployment Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deployment Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>